cambios 0.2 de la pagina principal que servira de hub para la pagina

--- a/final.html
+++ b/final.html
@@ -1,10 +1,15 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>Hub
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html>
+  <head> Los Curriculums que el profe pidio
     <title>Los maravillosos Curriculums para el profe</title>
+    <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
+<body background="380567.png">
+  <h1>Christopher Chiclla</h1>
+  <<p>El super modelo de christopher se especializa en multiples areas es un galan multitalentos</p>
+  <a href="chriscv.html"><img src="chris.jpeg"></a> 
+
 
   </body>
 </html>
