fase final de hub y agregar foto

--- a/final.html
+++ b/final.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head> Los Curriculums que el profe pidio
+  <head>
     <title>Los maravillosos Curriculums para el profe</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
-  <body>
+
 <body background="380567.png">
-  <h1>Christopher Chiclla</h1>
-  <<p>El super modelo de christopher se especializa en multiples areas es un galan multitalentos</p>
-  <a href="chriscv.html"><img src="chris.jpeg"></a> 
+<span id="tony">Los Curriculums que el profe pidio</span>
+  <table style="width:100%">
+    <tr>
+      <td>Christopher Chiclla</td>
+      <td>José Luis González M.</td>
+    </tr>
+    <tr>
+      <td><p> Above the average person </p>
+      <a href="chriscv.html"><img src="chris.jpeg"></a>   </td>
+      <td><p>Estudiante promedio</p>
+        <a href="josecv.html"><img src="jose.jpg"></a>
+      </td>
+    </tr>
+
+  </table>
+<iframe autoplay width="560" height="315" src="https://www.youtube.com/embed/lpvT-Fciu-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
   </body>
