--- a/josecv.html
+++ b/josecv.html
@@ -2,13 +2,25 @@
 <html lang="en" dir="ltr">
   <head>CV Jose Luis
     <meta charset="utf-8">
+    <link rel="stylesheet" href="estilo1.css">
     <title>Curriculum vitae</title>
   </head>
   <body>
-    <span id="titulo">José Luis González M.</span>
-    <span id="desc">Ser interesante que busca no morir de hambre en el mercado de los computadores y opto por ver la programacion como la mejor opcion por favor contratenme</span>
+    <body background="konoback.jpg">
+  <p><span id="titulo">José Luis González M.</span></p>
+    <p><span id="desc">Ser interesante que busca no morir de hambre en el mercado de los computadores y opto por ver la programacion como la mejor opcion por favor contratenme</span></p>
+<img src="jose.jpg" alt="io">
     <hr style="color: #0056b2;" />
+<dl>
+  <dt><b>Experiencia laboral</b></dt>
+  <dd>Ninguna relevante </dd>
+  <dt><b>estudios</b></dt>
+  <dd>niguno relevante aun </dd>
+  <dt><b>informacion relevante</b></dt>
+  <dd>se trabaja si se le enseña, capta rapido</dd>
 
-
+</dl>
+<img src="licc.jpg" alt="le licc">
+<a href="final.html"><img src="back.png"></a>
   </body>
 </html>
