--- a/Chriscv.html
+++ b/Chriscv.html
@@ -16,7 +16,7 @@
         <h1>Estudios</h1>
         <ol>
             <li>Centro Bilingue Vista Alegre
-            <li>UIP</li>   
+            <li>UIP</li>
             </li>
         </ol>
 
@@ -26,6 +26,6 @@
             <li>Español</li>
             <li>Ingles</li>
         </ol>
-        <a href="http://"hub></a>
+        <a href="final.html"</a>
     </body>
 </html>
